# E-K-H-O

./: .gitignore  .pre-commit-config.yaml  200.html  404.html  ARCHITECTURE.md  CLAUDE.md  EKHO_fichier_de_lancement_V1.py  LICENSE  Note de performance du projet  PROCESSUS EKHO POUR MIND MAP  README.md  docker-compose.yml  index.html  novembre2025 - ARCHITECTURE FINALE - MVP EKHO + Note de performance du projet V2  publish-info.json  pyproject.toml  robots.txt  sitemap.xml  test_translation_pipeline.py  test_video_dubbing.py  test_video_global_pipeline.py  test_voice_cloning.py
.github/workflows/: ci-python.yml  deploy.yml  generate-article.yml  post-linkedin.yml  scheduled-deploy.yml
about/: index.html
apps/cli/: ekho_cli.py  test.py
assets/: index-1IzBbvH9.js  index-AMYm2DnI.css  index-BAr-XDfB.css  index-BKOfPx_B.js  index-BQXzxlmg.css  index-BVwmZkhW.js  index-BaKtw2el.js  index-BhSADWOd.js  index-BibJhU6Z.js  index-BlVRfDq1.css  index-BoqrYlAq.css  index-C9O35Egm.js  index-C9b6CIY_.js  index-CAkmSPWF.js  index-CHJEbPmr.js  index-CSahzXDg.js  index-CUOqMoUG.css  index-CbaR4wE3.js  index-Cdsa_O7D.css  index-CvGu8L-q.js  index-D2cpg5lz.js  index-DI5ASPI-.css  index-DIv-clRX.css  index-DO_IF5MP.js  index-DaWM2fXZ.css  index-DwXSe_AR.js  index-FO-658OY.js  index-IIDvT4gk.js  index-R5cjrfZu.js  index-WHM6Hhp6.js  index-XYz0eR7z.js  index-c-yUS2o9.css  index-eRAG98vH.css  index-q1t_mHrO.js  index-tGGgCUXR.css  index-tGzkdcpv.js  index-tn9jeUQs.css  index-u5z5YP97.js
contact/: index.html
demos/: index.html
go-to-market/: EKHO_Prospection_Strategy.md  Email prospection  Mise a jour v1.1 11 novembre 2025  README.md
mag/: index.html
mag/3-signes-que-tu-es-pret-a-internationaliser/: index.html
mag/3-signs-your-content-is-ready-to-go-international/: index.html
mag/anatomie-createur-10m-abonnes-2026/: index.html
mag/arbitrage-geographique-une-video-dix-marches/: index.html
mag/b2b-langue-decideur-variable-closing/: index.html
mag/banger-ai-guerre-format-court-repurposing/: index.html
mag/banger-ai-short-form-war-repurposing-market/: index.html
mag/before-you-rebuild-repurpose/: index.html
mag/canada-francophone-le-marche-que-tout-le-monde-ignore/: index.html
mag/canva-26-billion-market-non-designers/: index.html
mag/canva-26-milliards-marche-non-designers/: index.html
mag/ce-que-les-grands-createurs-font-differemment/: index.html
mag/ce-que-tu-sacrifies-en-ne-localisant-pas-ton-contenu/: index.html
mag/comment-vendre-a-l-etranger-sans-retourner-ses-videos/: index.html
mag/content-as-asset-class-not-cost-center/: index.html
mag/cpm-anglais-asymetrie-marche-publicitaire/: index.html
mag/cpm-gap-english-8x-french-content-economics/: index.html
mag/creator-economy-production-vs-distribution-gap/: index.html
mag/deepl-qualite-contre-echelle-google-traduction/: index.html
mag/deepl-quality-vs-scale-translation-market/: index.html
pricing/: index.html
scripts/: README.md  generate-article.mjs  generate-sitemap.mjs  linkedin-post.mjs  start_all_services.sh  stop_all_services.sh
services/: index.html
services/asr_whisper/: Dockerfile  README.md  pyproject.toml
services/asr_whisper/asr_whisper/: __init__.py  api.py  config.py  whisper_engine.py
services/asr_whisper/tests/: __init__.py  test_api.py  test_config.py
services/llm/: pyproject.toml  setup.py
services/llm/llm/: __init__.py  api.py  config.py  gemini_engine.py  openai_engine.py
services/nmt/: Dockerfile  README.md  pyproject.toml
services/nmt/nmt/: __init__.py  api.py  config.py  translation_engine.py
services/nmt/tests/: __init__.py  test_api.py  test_config.py
services/tts/: .dockerignore  Dockerfile  README.md  pyproject.toml  start_tts.sh
services/tts/tests/: test_api.py  test_config.py  test_factory.py
services/tts/tts/: __init__.py  api.py  base_engine.py  config.py  coqui_engine.py  engine_factory.py  mock_engine.py  openvoice_engine.py
services/vad/: pyproject.toml  setup.py
services/vad/vad/: __init__.py  api.py  config.py  segmentation_engine.py
website/: package-lock.json
website/apps/web/: index.html  (+3 more)
(+65 files in other folders)
