[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ekho-tts"
version = "0.1.0"
description = "Text-to-Speech service with voice cloning for EKHO platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    "numpy>=1.26.0",
    "ekho-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "black>=24.0",
    "ruff>=0.6",
]

# Coqui TTS (Python 3.9-3.11 only)
coqui = [
    "TTS>=0.22.0",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "scipy>=1.14.0",
    "librosa>=0.10.0",
]

# OpenVoice (optional, lighter alternative)
openvoice = [
    "openvoice>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
